# syntheval

./: .gitattributes  .gitignore  LICENSE  README.md  SE_config.json  SynthEval_result_file.csv  TODO.txt  metrics_references.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: doctests.yml  release.yml
guides/: metrics_references.md  preprocessing.ipynb  syntheval_benchmark.ipynb  syntheval_guide.ipynb
guides/example/: breast_cancer_synthpop_syn.csv  breast_cancer_test.csv  breast_cancer_train.csv  hepatitis_ADSGAN_syn.csv  hepatitis_BN_syn.csv  hepatitis_noise_baseline.csv  hepatitis_test.csv  hepatitis_train.csv  penguins_BN_syn.csv  penguins_noise_baseline.csv  penguins_test.csv  penguins_train.csv
guides/example/ex_data_dir/: a_hepatitis_sampling_baseline.csv  b_hepatitis_smote_baseline.csv  c_hepatitis_daib_baseline.csv  e_hepatitis_synthpop_syn_best.csv  f_hepatitis_CTGAN_syn_best.csv  g_hepatitis_ADSGAN_syn_best.csv  h_hepatitis_synthpop_1_syn.csv  i_hepatitis_BN_7_syn.csv  j_hepatitis_CTGAN_9_syn.csv
src/syntheval/: __init__.py  __main__.py  file_utils.py  metrics.py  plt_utils.py  syntheval.py
src/syntheval/metrics/: __init__.py  metric_accuracy_difference.py  metric_confidence_interval_overlap.py  metric_epsilon_identifiability.py  metric_hitting_rate.py  metric_kolmogorov_smirnov.py  metric_mixed_correlation.py  metric_propensity_mse.py  metric_template.py
src/syntheval/metrics/core/: metric.py
src/syntheval/metrics/fairness/: metric_statistical_parity.py
src/syntheval/metrics/privacy/: metric_AttrDis.py  metric_MIA_classification.py  metric_distance_closest_record.py  metric_epsilon_identifiability.py  metric_hitting_rate.py  metric_nn_adversarial_accuracy.py  metric_nn_distance_ratio.py
src/syntheval/metrics/utility/: metric_accuracy_difference.py  metric_auroc_difference.py  metric_confidence_interval_overlap.py  metric_dimensionwise_means.py  metric_feature_importance_overlap.py  metric_hellinger_distance.py  metric_kolmogorov_smirnov.py  metric_max_mean_discrepancy.py  metric_mixed_correlation.py  metric_mutual_information.py  metric_principal_component_analysis.py  metric_propensity_mse.py  metric_quantile_mse.py
src/syntheval/presets/: fast_eval.json  full_eval.json  privacy.json
src/syntheval/utils/: ascii_console.py  configuration.py  console_output.py  nn_distance.py  plot_metrics.py  postprocessing.py  preprocessing.py  rich_console.py  variable_detection.py
temp/: syntheval.py
temp/metrics/: __init__.py  metric_A.py  metric_accuracy_difference.py  metric_adversarial_accuracy.py  metric_dimensionwise_means.py  metric_distance_closest_record.py  metric_epsilon_identifiability.py  metric_hellinger_distance.py  metric_kolmogorov_smirnov.py  metric_mixed_correlation.py  metric_mutual_information.py  metric_nn_adversarial_accuracy.py  metric_nn_distance_ratio.py  metric_principal_component_analysis.py  metric_template.py
temp/metrics/core/: metric.py  preprocessing.py
temp/presets/: privacy.json  privacy_losses.json
temp/utils/: nn_distance.py  plot_metrics.py  variable_detection.py
tests/: test_metrics.py
