[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syntheval"
version = "1.1.2"
authors = [
  { name="Anton D. Lautrup"},
  { name="Tobias Hyrup"},
  { name="Peter Schneider-Kamp"}
]

description = "A package for evaluating synthetic data fidelity on various performance dimensions."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    'gower',
    'scipy',
    'seaborn',
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/syntheval"
"Bug Tracker" = "https://github.com/schneiderkamplab/syntheval/issues"

[tool.hatch.build]
include = [
    'src/syntheval',
    'LICENSE',
    'README.md',
]
