[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syntheval"
version = "1.6.2"
authors = [
  { name="Anton D. Lautrup"},
  { name="Tobias Hyrup"},
  { name="Muhammad Rajabinasab"},
  { name="Peter Schneider-Kamp"}
]
dependencies = [
    "click >= 8.1.3",
    "matplotlib",
    "numpy ~= 1.26 ",
    "pandas",
    "scikit-learn >= 1.2",
    "scipy >= 1.14.1",
    "seaborn",
    "tqdm",
    "lightgbm",
    "pcametric ~= 1.0.3",
]

description = "A package for evaluating synthetic data fidelity on various performance dimensions."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/schneiderkamplab/syntheval"
"Bug Tracker" = "https://github.com/schneiderkamplab/syntheval/issues"

[project.scripts]
syntheval = "syntheval.__main__:cli"

[tool.hatch.build]
include = [
    'src/syntheval',
    'LICENSE',
    'README.md',
]
[tool.hatch.build.targets.wheel]
packages = ["src/syntheval"]